# Figure

./: CMakeLists.txt  Readme.md  circle.cpp  circle.h  convexunconvexpolygon.cpp  convexunconvexpolygon.h  ellipse.cpp  ellipse.h  figure.cpp  figure.h  figurefabric.cpp  figurefabric.h  figuretypes.h  figurewindow.cpp  figurewindow.h  figurewindow.ui  main.cpp  mathhelper.cpp  mathhelper.h  parallelogramm.cpp  parallelogramm.h  randomgenerator.h  rectangle.cpp  rectangle.h  scene.cpp  scene.h  square.cpp  square.h  triangle.cpp  triangle.h
